src/parser/Footle.java
/* Generated By:JavaCC: Do not edit this line. Footle.java */
package parser;

import expression.*;
import value.*;
import Interpreter.*;
import java.util.LinkedList;
import java.util.List;

import java.io.*;
/** Simple brace matcher. */
public class Footle implements FootleConstants {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
    //Reader sr = new StringReader("testfile");
    Reader sr = null;
        try {
                sr = new FileReader("testfile");
        } catch (FileNotFoundException e) {
                // TODO Auto-generated catch block
                e.printStackTrace();
        }
    Footle parser = new Footle(sr);
    Expression tree = parser.Input();
    try {
                tree.getValue(null);
        } catch (ReturnException e) {
                // TODO Auto-generated catch block
                e.printStackTrace();
        } catch (TypeException e) {
                // TODO Auto-generated catch block
                e.printStackTrace();
        } catch (UnboundIdentifierException e) {
                // TODO Auto-generated catch block
                e.printStackTrace();
        }
    int temp = 0;
  }

/** Root production. */
  static final public Expression Input() throws ParseException {
 List<Expression> finList = new LinkedList<Expression>(); Expression finalExp;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case LPAREN:
      case VAR:
      case IF:
      case WHILE:
      case TRUE:
      case FALSE:
      case RETURN:
      case NEW:
      case NOT:
      case ISSTR:
      case STRLEN:
      case SUBSTRING:
      case PRINT:
      case STRINGEQUAL:
      case STRINGLESS:
      case ISINT:
      case ISFP:
      case ISVOID:
      case ISCLOSURE:
      case ISPLAIN:
      case FUNC:
      case ID:
      case NUM:
      case FLOAT:
      case STRING:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      finalExp = Statement();
                           finList.add(finalExp);
    }
    jj_consume_token(0);
   {if (true) return new Sequence(finList);}
    throw new Error("Missing return statement in function");
  }

  static final public Expression Statement() throws ParseException {
 Expression retVal = null; Expression retVal1 = null; Expression retVal2 = null;
  Token idval = null; Token funName = null; Token exp; List<Expression> finList = new LinkedList<Expression>();
  List<String> argList = new LinkedList<String>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      jj_consume_token(VAR);
      idval = jj_consume_token(ID);
      jj_consume_token(EQ);
      retVal = Expression();
      jj_consume_token(SEMI);
     {if (true) return new OpAssign(new OpVarDecl(idval.image), retVal);}
      break;
    default:
      jj_la1[4] = jj_gen;
      if (jj_2_2(3)) {
        retVal = Expr();
        jj_consume_token(EQ);
        retVal1 = Expression();
        jj_consume_token(SEMI);
     {if (true) return new OpAssign(retVal, retVal1);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WHILE:
          jj_consume_token(WHILE);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(RPAREN);
          retVal1 = Statement();
     {if (true) return new OpWhile(retVal, (Sequence)retVal1);}
          break;
        case ISINT:
          jj_consume_token(ISINT);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(RPAREN);
     {if (true) return new IsType(IntValue.class, retVal);}
          break;
        case LBRACE:
          jj_consume_token(LBRACE);
          label_2:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LBRACE:
            case LPAREN:
            case VAR:
            case IF:
            case WHILE:
            case TRUE:
            case FALSE:
            case RETURN:
            case NEW:
            case NOT:
            case ISSTR:
            case STRLEN:
            case SUBSTRING:
            case PRINT:
            case STRINGEQUAL:
            case STRINGLESS:
            case ISINT:
            case ISFP:
            case ISVOID:
            case ISCLOSURE:
            case ISPLAIN:
            case FUNC:
            case ID:
            case NUM:
            case FLOAT:
            case STRING:
              ;
              break;
            default:
              jj_la1[1] = jj_gen;
              break label_2;
            }
            retVal1 = Statement();
                                    finList.add(retVal1);
          }
          jj_consume_token(RBRACE);
     {if (true) return new Sequence(finList);}
          break;
        case IF:
          jj_consume_token(IF);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(RPAREN);
          retVal1 = Statement();
          if (jj_2_1(3)) {
            jj_consume_token(ELSE);
            retVal2 = Statement();
          } else {
            ;
          }
     {if (true) return new OpIfElse(retVal, (Sequence)retVal1, (Sequence)retVal2);}
          break;
        default:
          jj_la1[5] = jj_gen;
          if (jj_2_3(4)) {
            jj_consume_token(FUNC);
            funName = jj_consume_token(ID);
            jj_consume_token(LPAREN);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case ID:
              idval = jj_consume_token(ID);
                                                        argList.add(idval.image);
              label_3:
              while (true) {
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case COMMA:
                  ;
                  break;
                default:
                  jj_la1[2] = jj_gen;
                  break label_3;
                }
                jj_consume_token(COMMA);
                idval = jj_consume_token(ID);
                          argList.add(idval.image);
              }
              break;
            default:
              jj_la1[3] = jj_gen;
              ;
            }
            jj_consume_token(RPAREN);
            retVal1 = Statement();
     {if (true) return new OpFuncDecl(new Function(argList, (Sequence)retVal1), funName.image);}
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case RETURN:
              jj_consume_token(RETURN);
              retVal = Expression();
              jj_consume_token(SEMI);
     {if (true) return new Return(retVal);}
              break;
            case PRINT:
              jj_consume_token(PRINT);
              retVal = Expression();
              jj_consume_token(SEMI);
     {if (true) return new Print(retVal);}
              break;
            case LPAREN:
            case TRUE:
            case FALSE:
            case NEW:
            case NOT:
            case ISSTR:
            case STRLEN:
            case SUBSTRING:
            case STRINGEQUAL:
            case STRINGLESS:
            case ISFP:
            case ISVOID:
            case ISCLOSURE:
            case ISPLAIN:
            case FUNC:
            case ID:
            case NUM:
            case FLOAT:
            case STRING:
              retVal = Expression();
              jj_consume_token(SEMI);
     {if (true) return retVal;}
              break;
            default:
              jj_la1[6] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression Expression() throws ParseException {
 Expression retVal = null; Expression retVal1 = null; Expression retVal2 = null;
 Token val; Token idval;
 List<Expression> finList = new LinkedList<Expression>();
 List<String> argList = new LinkedList<String>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUNC:
      jj_consume_token(FUNC);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        idval = jj_consume_token(ID);
                              argList.add(idval.image);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[7] = jj_gen;
            break label_4;
          }
          jj_consume_token(COMMA);
          idval = jj_consume_token(ID);
                          argList.add(idval.image);
        }
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
      retVal = Statement();
     {if (true) return new ClosureValue(new Function(argList, (Sequence)retVal));}
      break;
    default:
      jj_la1[13] = jj_gen;
      if (jj_2_15(100)) {
        retVal = Expr();
        label_5:
        while (true) {
          jj_consume_token(EQUAL);
          retVal2 = Expression();
          if (jj_2_4(100)) {
            ;
          } else {
            break label_5;
          }
        }
     {if (true) return new OpEquals(retVal, retVal2);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ISSTR:
          jj_consume_token(ISSTR);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(RPAREN);
     {if (true) return new IsType(StringValue.class, retVal);}
          break;
        case ISFP:
          jj_consume_token(ISFP);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(RPAREN);
     {if (true) return new IsType(FloatValue.class, retVal);}
          break;
        case ISVOID:
          jj_consume_token(ISVOID);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(RPAREN);
     {if (true) return new IsType(VoidValue.class, retVal);}
          break;
        case ISCLOSURE:
          jj_consume_token(ISCLOSURE);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(RPAREN);
     {if (true) return new IsType(ClosureValue.class, retVal);}
          break;
        case ISPLAIN:
          jj_consume_token(ISPLAIN);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(RPAREN);
     {if (true) return new IsType(PlainObject.class, retVal);}
          break;
        case STRLEN:
          jj_consume_token(STRLEN);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(RPAREN);
     {if (true) return new StringLength(retVal);}
          break;
        case SUBSTRING:
          jj_consume_token(SUBSTRING);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(COMMA);
          retVal1 = Expression();
          jj_consume_token(COMMA);
          retVal2 = Expression();
          jj_consume_token(RPAREN);
     {if (true) return new SubString(retVal, retVal1, retVal2);}
          break;
        case STRINGEQUAL:
          jj_consume_token(STRINGEQUAL);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(COMMA);
          retVal1 = Expression();
          jj_consume_token(RPAREN);
     {if (true) return new OpStringEqual(retVal, retVal1);}
          break;
        case STRINGLESS:
          jj_consume_token(STRINGLESS);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(COMMA);
          retVal1 = Expression();
          jj_consume_token(RPAREN);
     {if (true) return new OpStringLess(retVal, retVal1);}
          break;
        default:
          jj_la1[14] = jj_gen;
          if (jj_2_16(4)) {
            idval = jj_consume_token(ID);
            jj_consume_token(LPAREN);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LPAREN:
            case TRUE:
            case FALSE:
            case NEW:
            case NOT:
            case ISSTR:
            case STRLEN:
            case SUBSTRING:
            case STRINGEQUAL:
            case STRINGLESS:
            case ISFP:
            case ISVOID:
            case ISCLOSURE:
            case ISPLAIN:
            case FUNC:
            case ID:
            case NUM:
            case FLOAT:
            case STRING:
              retVal = Expression();
                             finList.add(retVal);
              label_6:
              while (true) {
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case COMMA:
                  ;
                  break;
                default:
                  jj_la1[9] = jj_gen;
                  break label_6;
                }
                jj_consume_token(COMMA);
                retVal = Expression();
                                     finList.add(retVal);
              }
              break;
            default:
              jj_la1[10] = jj_gen;
              ;
            }
            jj_consume_token(RPAREN);
    {if (true) return new OpFunctionCall(new IdValue(idval.image), finList);}
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case NEW:
              jj_consume_token(NEW);
              idval = jj_consume_token(ID);
              jj_consume_token(LPAREN);
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case LPAREN:
              case TRUE:
              case FALSE:
              case NEW:
              case NOT:
              case ISSTR:
              case STRLEN:
              case SUBSTRING:
              case STRINGEQUAL:
              case STRINGLESS:
              case ISFP:
              case ISVOID:
              case ISCLOSURE:
              case ISPLAIN:
              case FUNC:
              case ID:
              case NUM:
              case FLOAT:
              case STRING:
                retVal = Expression();
                                                       finList.add(retVal);
                label_7:
                while (true) {
                  switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                  case COMMA:
                    ;
                    break;
                  default:
                    jj_la1[11] = jj_gen;
                    break label_7;
                  }
                  jj_consume_token(COMMA);
                  retVal = Expression();
                                     finList.add(retVal);
                }
                break;
              default:
                jj_la1[12] = jj_gen;
                ;
              }
              jj_consume_token(RPAREN);
     {if (true) return new OpNew(new IdValue(idval.image), finList);}
              break;
            default:
              jj_la1[15] = jj_gen;
              if (jj_2_17(100)) {
                retVal = Expr();
                label_8:
                while (true) {
                  jj_consume_token(PLUS);
                  retVal2 = Expression();
                  if (jj_2_5(100)) {
                    ;
                  } else {
                    break label_8;
                  }
                }
     {if (true) return new OpAdd(retVal, retVal2);}
              } else if (jj_2_18(100)) {
                retVal = Expr();
                label_9:
                while (true) {
                  jj_consume_token(MINUS);
                  retVal2 = Expression();
                  if (jj_2_6(100)) {
                    ;
                  } else {
                    break label_9;
                  }
                }
     {if (true) return new OpSub(retVal, retVal2);}
              } else if (jj_2_19(100)) {
                retVal = Expr();
                label_10:
                while (true) {
                  jj_consume_token(MULT);
                  retVal2 = Expression();
                  if (jj_2_7(100)) {
                    ;
                  } else {
                    break label_10;
                  }
                }
     {if (true) return new OpMult(retVal, retVal2);}
              } else if (jj_2_20(100)) {
                retVal = Expr();
                label_11:
                while (true) {
                  jj_consume_token(DIVIDE);
                  retVal2 = Expression();
                  if (jj_2_8(100)) {
                    ;
                  } else {
                    break label_11;
                  }
                }
     {if (true) return new OpDivide(retVal, retVal2);}
              } else if (jj_2_21(100)) {
                retVal = Expr();
                label_12:
                while (true) {
                  jj_consume_token(LTHEN);
                  retVal2 = Expression();
                  if (jj_2_9(100)) {
                    ;
                  } else {
                    break label_12;
                  }
                }
     {if (true) return new OpLessThan(retVal, retVal2);}
              } else if (jj_2_22(100)) {
                retVal = Expr();
                label_13:
                while (true) {
                  jj_consume_token(GTHEN);
                  retVal2 = Expression();
                  if (jj_2_10(100)) {
                    ;
                  } else {
                    break label_13;
                  }
                }
     {if (true) return new OpGreaterThan(retVal, retVal2);}
              } else if (jj_2_23(100)) {
                retVal = Expr();
                label_14:
                while (true) {
                  jj_consume_token(LTE);
                  retVal2 = Expression();
                  if (jj_2_11(100)) {
                    ;
                  } else {
                    break label_14;
                  }
                }
     {if (true) return new OpLTE(retVal, retVal2);}
              } else if (jj_2_24(100)) {
                retVal = Expr();
                label_15:
                while (true) {
                  jj_consume_token(GTE);
                  retVal2 = Expression();
                  if (jj_2_12(100)) {
                    ;
                  } else {
                    break label_15;
                  }
                }
     {if (true) return new OpGTE(retVal, retVal2);}
              } else if (jj_2_25(100)) {
                retVal = Expr();
                label_16:
                while (true) {
                  jj_consume_token(AND);
                  retVal2 = Expression();
                  if (jj_2_13(100)) {
                    ;
                  } else {
                    break label_16;
                  }
                }
     {if (true) return new And(retVal, retVal2);}
              } else if (jj_2_26(100)) {
                retVal = Expr();
                label_17:
                while (true) {
                  jj_consume_token(OR);
                  retVal2 = Expression();
                  if (jj_2_14(100)) {
                    ;
                  } else {
                    break label_17;
                  }
                }
     {if (true) return new Or(retVal, retVal2);}
              } else if (jj_2_27(100)) {
                jj_consume_token(NOT);
                retVal = Expression();
     {if (true) return new Not(retVal);}
              } else if (jj_2_28(100)) {
                retVal = Expr();
     {if (true) return retVal;}
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression Expr() throws ParseException {
 Expression retVal = null; Token val = null; Token idval = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
      val = jj_consume_token(NUM);
     {if (true) return new IntValue(Integer.parseInt(val.image));}
      break;
    case FLOAT:
      val = jj_consume_token(FLOAT);
     {if (true) return new FloatValue(Float.parseFloat(val.image));}
      break;
    case TRUE:
      jj_consume_token(TRUE);
     {if (true) return new BoolValue(true);}
      break;
    case FALSE:
      jj_consume_token(FALSE);
     {if (true) return new BoolValue(false);}
      break;
    case STRING:
      val = jj_consume_token(STRING);
     {if (true) return new StringValue(val.image);}
      break;
    default:
      jj_la1[16] = jj_gen;
      if (jj_2_30(10)) {
        jj_consume_token(LPAREN);
        retVal = Expression();
        jj_consume_token(RPAREN);
     {if (true) return retVal;}
      } else if (jj_2_31(99)) {
        val = jj_consume_token(ID);
        if (jj_2_29(4)) {
          jj_consume_token(DOT);
          idval = jj_consume_token(ID);
        } else {
          ;
        }
     {if (true) return idval == null ? new IdValue(val.image)
     : new OpField(new IdValue(val.image), idval.image, null);}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }
